# xen-sysmon

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/xen_sysmon/: __init__.py  __main__.py  app.py  common.py  feed.py  icon.py  protocols.py  settings.py  settings_manager.py  sysinfo.py
src/xen_sysmon/data/: xen-sysmon.desktop
stubs/xen/: util.pyi
stubs/xen/lowlevel/: xc.pyi  xs.pyi
stubs/xen/migration/: legacy.pyi  libxc.pyi  libxl.pyi  public.pyi  verify.pyi  xl.pyi
tests/: conftest.py
tests/integration/: test_settings_manager.py
tests/unit/: test_feed.py  test_icon.py  test_sysinfo.py
tools/: build_rpm.sh  tweak_spec.py
